# HiGHS

./: .gitignore  pyproject.toml
.github/julia/: build_tarballs.jl
.github/workflows/: build-python-sdist.yml  build-wheels-push.yml  hipo-fetch.yml  hipo.yml  test-nuget-package.yml  test-nuget-win.yml  test-python-ubuntu.yml  test-python-win.yml
check/: CMakeLists.txt  TestFilereader.cpp  TestHighsExternalDeps.cpp  TestHighsHessian.cpp
cmake/: vcpkg.cmake
examples/: minimal.py
highs/: CMakeLists.txt  HighsExternalDeps.cpp  HighsExternalDeps.h
highs/highspy/: highs.py
highs/lp_data/: HighsOptions.cpp
highs/model/: HighsHessianUtils.cpp
highs/util/: HighsMatrixUtils.cpp
highspy/: CMakeLists.txt  highs_bindings.cpp  pyproject.toml
highspy-extras/: CMakeLists.txt  pyproject.toml
src/interfaces/highspy/highspy/: highs.py
src/interfaces/highspy/highspy/tests/: test_highspy.py
tests/: test_highspy.py
