[build-system]
requires = ["scikit-build-core>=0.3.3"]
build-backend = "scikit_build_core.build"

[project]
name = "highspy-extras"
version = "1.13.1.dev9"
description = "HiGHS external dependencies extension for highspy"
authors = [{ name = "HiGHS developers", email = "highsopt@gmail.com" }]
readme = "README.md"

requires-python = ">=3.8"
# dependencies = ["highspy>=1.12.0"]

classifiers = [
  "License :: OSI Approved :: Apache License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
"Source Code" = "https://github.com/ERGO-Code/HiGHS"
"Bug Tracker" = "https://github.com/ERGO-Code/HiGHS/issues"

[tool.scikit-build]
build.verbose = true
wheel.expand-macos-universal-tags = true
wheel.packages = ["highspy_extras"]
wheel.exclude = ["include", "lib*/", "bin", "LICENSE.txt", "README.md"]

# Files to include in the SDist even if they are skipped by default. Supports
# gitignore syntax.
sdist.include = [
  "highspy-extras/*",
  "LICENSE",
  "README.md",
  "THIRD_PARTY_NOTICES.md",
  "extern",
  "cmake",
]

sdist.exclude = [
  ".github",
  ".gitattributes",
  ".gitignore",
  ".github",
  "app",
  "build",
  "check",
  "docs",
  "subprojects",
  ".coin-or",
  "build_webdemo.sh",
  ".clang-format",
  "__setup.py",
  "BUILD.bazel",
  "**meson**",
  "MODS.md",
  "WORKSPACE",
  "nuget/",
  "nuget/README.md",
  "highs/*.bazel*",
  "highs/*.meson*",
  "interfaces/*csharp*",
  "interfaces/*fortran*",
  "flake.*",
  "highs.pc.in",
]

[tool.cibuildwheel]
build = "*"
archs = ["auto64", "auto32"]
repair-wheel-command = ""
build-verbosity = 1

# Forward VCPKG_ROOT into the isolated build environment.
environment-pass = ["VCPKG_ROOT", "VCPKG_DEFAULT_BINARY_CACHE", "VCPKG_BINARY_SOURCES"]

[tool.cibuildwheel.linux]
# installs zip, build tools, and vcpkg
before-all = [
  "command -v zip >/dev/null 2>&1 || yum install -y zip || (apt-get update && apt-get install -y zip) || apk add --no-cache zip",
  "command -v ninja >/dev/null 2>&1 || yum install -y ninja-build gcc gcc-c++ make cmake curl tar || (apt-get update && apt-get install -y ninja-build g++ gcc make cmake curl tar) || apk add --no-cache ninja build-base cmake curl tar bash linux-headers",
  ": \"${VCPKG_ROOT:=/opt/vcpkg}\"; [ -d \"$VCPKG_ROOT/.git\" ] || git clone https://github.com/microsoft/vcpkg.git \"$VCPKG_ROOT\"; [ -x \"$VCPKG_ROOT/vcpkg\" ] || LDFLAGS=\"${LDFLAGS:-} -ldl\" \"$VCPKG_ROOT/bootstrap-vcpkg.sh\" -disableMetrics",
]
environment = { VCPKG_ROOT = "/opt/vcpkg", VCPKG_FORCE_SYSTEM_BINARIES = "1" }

[tool.cibuildwheel.windows]
# Only installs vcpkg if needed (github already includes it)
before-all = [
  "if not defined VCPKG_ROOT set VCPKG_ROOT=C:\\vcpkg",
  "if not exist \"%VCPKG_ROOT%\\.git\" git clone https://github.com/microsoft/vcpkg.git \"%VCPKG_ROOT%\"",
  "if not exist \"%VCPKG_ROOT%\\vcpkg.exe\" call \"%VCPKG_ROOT%\\bootstrap-vcpkg.bat\" -disableMetrics",
]
environment = { VCPKG_ROOT = "${VCPKG_ROOT:-C:/vcpkg}" }
