# scikit_build_core can't access files in parent directory
# https://github.com/scikit-build/scikit-build-core/issues/615
# so we use our own build_backend.py
[build-system]
requires = ["scikit-build-core>=0.3.3"]
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "highspy-extras"
version = "1.13.1.dev9"
description = "HiGHS external dependencies extension for highspy"
authors = [{ name = "HiGHS developers", email = "highsopt@gmail.com" }]
readme = "README.md"

requires-python = ">=3.8"
# dependencies = ["highspy>=1.12.0"]

classifiers = [
  "License :: OSI Approved :: Apache License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
"Source Code" = "https://github.com/ERGO-Code/HiGHS"
"Bug Tracker" = "https://github.com/ERGO-Code/HiGHS/issues"

[tool.scikit-build]
build.verbose = true
wheel.expand-macos-universal-tags = true
wheel.packages = ["highspy_extras"]
wheel.exclude = ["include", "lib*/", "bin", "LICENSE.txt", "README.md"]

# Files to include in the SDist even if they are skipped by default. Supports
# gitignore syntax.
sdist.include = [
  "LICENSE.txt",
  "README.md",
  "THIRD_PARTY_NOTICES.md",
  "extern",
  "cmake",
  "Version.txt",
  "highs/HConfig.h.in"
]

sdist.exclude = [
  ".github",
  ".gitattributes",
  ".gitignore",
  ".github",
  "app",
  "build",
  "check",
  "docs",
  "subprojects",
  ".coin-or",
  "build_webdemo.sh",
  ".clang-format",
  "__setup.py",
  "BUILD.bazel",
  "**meson**",
  "MODS.md",
  "WORKSPACE",
  "nuget/",
  "nuget/README.md",
  "interfaces/*csharp*",
  "interfaces/*fortran*",
  "flake.*",
  "highs.pc.in",
]

[tool.cibuildwheel]
build = "*"
archs = ["auto64", "auto32"]
repair-wheel-command = ""
build-verbosity = 1

# All github runners have vcpkg pre-installed
# Assume either VCPKG_ROOT xor VCPKG_INSTALLATION_ROOT is defined
environment-pass = ["VCPKG_ROOT", "VCPKG_INSTALLATION_ROOT", "VCPKG_DEFAULT_BINARY_CACHE"]

[tool.cibuildwheel.linux]
# vcpkg needs zip/unzip to reuse binary caches; install natively in the container
before-all = "yum install -y zip unzip 2>/dev/null || apt-get update && apt-get install -y zip unzip"
environment = { VCPKG_ROOT = "/host$VCPKG_ROOT$VCPKG_INSTALLATION_ROOT", VCPKG_DEFAULT_BINARY_CACHE = "/host$VCPKG_DEFAULT_BINARY_CACHE" }

# cannot use host vcpkg on i686 and musllinux
[[tool.cibuildwheel.overrides]]
select = "*-manylinux_i686 *-musllinux_*"
inherit.environment = "none"
environment = { VCPKG_ROOT = "", VCPKG_INSTALLATION_ROOT = "", CMAKE_ARGS = "-DBUILD_OPENBLAS=ON" }

[tool.cibuildwheel.windows]
environment = { VCPKG_ROOT = "$VCPKG_ROOT$VCPKG_INSTALLATION_ROOT" }